# jarvis-os

./: .editorconfig  .env.example  .gitignore  .npmrc  .replit  ACKNOWLEDGEMENTS.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  JARVIS_HEARTBEAT.md  JARVIS_ROADMAP.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SOUL.md  app.json  eas.json  improvement_log.md  jarvis-app.keystore  metro.config.js  nixpacks.toml  openclaw-copycat.md  package-lock.json  package.json  playwright.config.ts  railpack.json  railway.json  replit.md  replit.nix  skills-lock.json
.clawhub/: lock.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
agents/: COACHING.md  CONTEXT.md  PRIME.md  ROUTING.md  SOUL.md  TOOL_POLICY.md
android/: build.gradle  settings.gradle
android-daemon/: README.md  gradlew  jarvis-daemon.keystore  settings.gradle
app/: +native-intent.tsx  _layout.tsx  capability-gaps.tsx  code-proposals.tsx  desktop-connector-setup.tsx  focus-timer.tsx  inbox-rules.tsx  jarvis-report.tsx  login.tsx  onboarding.tsx  self-repair-history.tsx  skills.tsx  vault.tsx  voice-realtime.tsx
attached_assets/: Action_Plan_for_Improving_Jarvis_UI_Interaction_Reliability_1777438240860.md  Action_Plan_for_Improving_Jarvis_s_Interaction_with_Dynamic_UI__1777438240881.md  Action_Plan_for_Improving_Jarvis_s_Screen_Understanding_1777438240835.md  OpenCals_Findings_Report_1777419362268.md  (+21 more)
desktop-connector/src-tauri/: Cargo.toml  tauri.conf.json
desktop-connector/src-tauri/capabilities/: default.json
desktop-connector/src-tauri/src/: lib.rs  main.rs
(+1209 files in other folders)
