[package]
name = "jarvis-desktop-connector"
version = "0.1.0"
description = "Jarvis Desktop Connector"
authors = ["Jarvis"]
edition = "2021"

[lib]
name = "jarvis_desktop_connector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
